# Skyscribe---Visual-Script-IDE-for-Skyrim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  TODO_PHASE_0.md  vcpkg-configuration.json  vcpkg.json
doc/: TODO_PHASE_0.md  TODO_PHASE_1.md  TODO_PHASE_2.md  TODO_PHASE_3.md
src/: main.cpp
src/app/: Application.cpp  Application.h  Logger.cpp  Logger.h  Settings.cpp  Settings.h
src/codegen/: DirtyFlag.h  GraphTraversal.cpp  GraphTraversal.h  LintPass.cpp  LintPass.h  PapyrusLexer.cpp  PapyrusLexer.h  PapyrusStringBuilder.cpp  PapyrusStringBuilder.h
src/compiler/: CompileSession.cpp  CompileSession.h  CompilerLine.h  CompilerWrapper.cpp  CompilerWrapper.h  OutputParser.cpp  OutputParser.h
src/graph/: BuiltinNodes.cpp  BuiltinNodes.h  GraphSerializer.cpp  GraphSerializer.h  NodeDefinition.h  NodeRegistry.cpp  NodeRegistry.h  PinColorMap.h  PinType.h  ScriptGraph.cpp  ScriptGraph.h  UndoStack.cpp  UndoStack.h
src/project/: Project.cpp  Project.h  TemplateRegistry.cpp  TemplateRegistry.h
src/ui/: GraphEditorPanel.cpp  GraphEditorPanel.h  MainWindow.cpp  MainWindow.h  NewProjectDialog.cpp  NewProjectDialog.h  OutputPanel.cpp  OutputPanel.h  PreviewPanel.cpp  PreviewPanel.h  ProjectPanel.cpp  ProjectPanel.h  SettingsModal.cpp  SettingsModal.h  ToolPalettePanel.cpp  ToolPalettePanel.h
templates/ActorAlias/: AliasScript.psc  template.json
templates/Blank/: template.json
templates/QuestMod/: QuestScript.psc  template.json
tests/: CMakeLists.txt  catch_main.cpp  test_codegen.cpp  test_graph_model.cpp  test_graph_serializer.cpp  test_node_registry.cpp  test_output_parser.cpp  test_undo_stack.cpp
tests/scripts/: HelloWorld.psc
